#1265 Projecte Spring boot 2 Jboss EAP 7.2
- Projecte amb EAR

--- a/jboss7/helium-back/pom.xml
+++ b/jboss7/helium-back/pom.xml
@@ -4,16 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.1</version>
-	</parent>	
-	<!-- 
-	<parent>
 		<groupId>es.caib.helium</groupId>
 		<artifactId>helium-jboss7</artifactId>
 		<version>4.0.1</version>
 	</parent>	
+	
+	<!-- En el cas de no posar spring-boot com a parent en el pom pare
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.1</version>
+	</parent>
 
 	
 	<dependencyManagement>
@@ -38,26 +39,15 @@
 	 -->
 
 	<artifactId>helium-back</artifactId>
-	<groupId>es.caib.helium</groupId>
-	<version>4.0.1</version>
 	<packaging>war</packaging>
 	<name>helium-back</name>
 	<description>Aplicació Spring Boot 2 de proves</description>
-	<properties>
-		<java.version>11</java.version>
-	</properties>
 	<dependencies>
-	
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<exclusions>
-				<!-- Per evitar problemes a JBoss -->
 	            <exclusion>
 	                <groupId>org.apache.tomcat.embed</groupId>
 	                <artifactId>tomcat-embed-websocket</artifactId>
@@ -65,19 +55,78 @@
 	        </exclusions>
 		</dependency>
 		
+		<!-- 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.keycloak</groupId>
+		    <artifactId>keycloak-spring-boot-starter</artifactId>
+		</dependency>
+		 -->
+		
+		<!--  Pàgines JSP  -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>net.rakugakibox.spring.boot</groupId>
+			<artifactId>orika-spring-boot-starter</artifactId>
+			<version>${orika.starter.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+		</dependency>
+		
+				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>		
+				
 	</dependencies>
+
+	<!-- 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.keycloak.bom</groupId>
+				<artifactId>keycloak-adapter-bom</artifactId>
+				<version>${keycloak.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	 -->
 
 	<build>
 		<plugins>
