--- a/jboss7/pom.xml
+++ b/jboss7/pom.xml
@@ -9,17 +9,98 @@
 	<name>helium-jboss7</name>
 	<description>Projecte base Helium JBoss EAP 7.2</description>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.1</version>
+		<relativePath />
+	</parent>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>11</java.version>
-		<jaxb.version>2.3.0</jaxb.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
+		
+		<spring-boot.version>2.5.1</spring-boot.version>
+		<liquibase.version>4.3.3</liquibase.version>
+		<orika.starter.version>1.8.0</orika.starter.version>
+		<reflections.version>0.9.11</reflections.version>
+		<rsql.version>2.1.0</rsql.version>
+		<jasperreports.version>6.12.2</jasperreports.version>
+		<xdocreport.version>2.0.2</xdocreport.version>
+		<opencsv.version>4.6</opencsv.version>
+		<springdoc-openapi.version>1.2.25</springdoc-openapi.version>
+		<keycloak.version>14.0.0</keycloak.version>
+		<scsp.core.version>4.20.0</scsp.core.version>
+		<scsp.beans.version>4.3.0</scsp.beans.version>
+		<scsp.emisor.version>4.22.0</scsp.emisor.version>
+		<scsp.rampart.core.version>1.6.4.1</scsp.rampart.core.version>
+		<scsp.emisor.demo.version>3.3.0</scsp.emisor.demo.version>
+
+		<sitemesh.version>2.4.2</sitemesh.version>
+		<commons-lang.version>2.6</commons-lang.version>
+		<commons-httpclient.version>3.1</commons-httpclient.version>
+		<commons-fileupload.version>1.4</commons-fileupload.version>
+		<commons-beanutils.version>1.9.4</commons-beanutils.version>
+		<commons-io.version>2.8.0</commons-io.version>
+		<poi.version>3.15</poi.version>
+		<webjars-locator.version>0.40</webjars-locator.version>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.compiler.version>11</java.compiler.version>
+		<maven.compiler.target>${java.compiler.version}</maven.compiler.target>
+		<maven.compiler.source>${java.compiler.version}</maven.compiler.source>
+		<skipTests>true</skipTests>
 	</properties>
 
 	<modules>
 		<module>helium-back</module>
 		<module>helium-jboss7-ear</module>
 	</modules>
+	 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.12</version>
+				<configuration>
+					<message>Maven artifacts for ${project.version}</message>
+					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+					<noJekyll>true</noJekyll>
+					<branch>refs/heads/gh-pages</branch>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<path>maven</path>
+					<repositoryName>maven</repositoryName>
+					<repositoryOwner>GovernIB</repositoryOwner>
+					<server>github_governib_maven</server>
+					<merge>true</merge>
+					<dryRun>false</dryRun>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<distributionManagement>
+		<repository>
+			<id>github_governib_maven</id>
+			<name>GitHub GovernIB Maven Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+	</distributionManagement>
+	
 </project>
