--- a/jboss7/helium-back/src/main/resources/application.properties
+++ b/jboss7/helium-back/src/main/resources/application.properties
@@ -5,4 +5,18 @@
 
 # Port on escolta l'aplicació quan s'inicia amb el servidor emeded
 server.port=9080
-server.servlet.context-path=/helium
+server.servlet.context-path=/heliumback
+
+# Pàgines jsp a la carpeta src/main/webapp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+#logging.level.org.springframework=TRACE
+#logging.level.com=TRACE
+
+keycloak.auth-server-url=http://docker.limit.es:21234/auth
+#keycloak.auth-server-url=http://localhost:8180/auth
+keycloak.realm=GOIB
+keycloak.resource=goib-default
+keycloak.public-client=true
+
