--- a/jboss7/helium-jboss7-ear/pom.xml
+++ b/jboss7/helium-jboss7-ear/pom.xml
@@ -28,6 +28,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>helium-ejb</artifactId>
+			<version>${project.version}</version>
+			<type>ejb</type>
+			<exclusions>
+				<exclusion>
+					<groupId>org.liquibase</groupId>
+					<artifactId>liquibase-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>es.caib.helium</groupId>
 			<artifactId>helium-back</artifactId>
 			<version>4.0.1</version>
@@ -57,6 +69,11 @@
 						</manifestEntries>
 					</archive>
 					<modules>
+						<ejbModule>
+							<groupId>${project.groupId}</groupId>
+							<artifactId>helium-ejb</artifactId>
+							<bundleFileName>helium-ejb.jar</bundleFileName>
+						</ejbModule>
 						<webModule>
 							<groupId>${project.groupId}</groupId>
 							<artifactId>helium-back</artifactId>
