--- a/microservices/helium-monitor-service/pom.xml
+++ b/microservices/helium-monitor-service/pom.xml
@@ -37,9 +37,27 @@
 		</dependency>
 		<dependency>
 			<groupId>es.caib.helium</groupId>
-		    <artifactId>helium-jms-events</artifactId>
-		    <version>1.0</version>
+			<artifactId>helium-jms-events</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<!-- Mockito extention -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mockrunner</groupId>
+			<artifactId>mockrunner-jms</artifactId>
+			<version>2.0.6</version>
 		</dependency>
 	</dependencies>
-	
+
 </project>
