#1265 Projecte Spring boot 2 Jboss EAP 7.2
- Canvis finals
- Arxius Docker
- Configuració

--- a/jboss7/helium-service/pom.xml
+++ b/jboss7/helium-service/pom.xml
@@ -78,11 +78,6 @@
 			<version>${commons-io.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>es.scsp</groupId>
-			<artifactId>scsp-beans</artifactId>
-			<version>${scsp.beans.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.jibx</groupId>
 			<artifactId>jibx-run</artifactId>
 			<version>1.2.3</version>
@@ -98,13 +93,11 @@
 			<artifactId>helium-service-intf</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>emiserv-persistence</artifactId>
+			<artifactId>helium-persistence</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		 -->
 	</dependencies>
 	<repositories>
 		<repository>
