--- a/jboss7/helium-service-intf/pom.xml
+++ b/jboss7/helium-service-intf/pom.xml
@@ -52,5 +52,10 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang.version}</version>
+		</dependency>
 	</dependencies>
 </project>
