--- a/jboss7/pom.xml
+++ b/jboss7/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.1</version>
+		<version>2.4.2</version>
 		<relativePath />
 	</parent>
 
@@ -20,7 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
-		<spring-boot.version>2.5.1</spring-boot.version>
+		<spring-boot.version>2.4.2</spring-boot.version>
 		<liquibase.version>4.3.3</liquibase.version>
 		<orika.starter.version>1.8.0</orika.starter.version>
 		<reflections.version>0.9.11</reflections.version>
@@ -29,12 +29,7 @@
 		<xdocreport.version>2.0.2</xdocreport.version>
 		<opencsv.version>4.6</opencsv.version>
 		<springdoc-openapi.version>1.2.25</springdoc-openapi.version>
-		<keycloak.version>14.0.0</keycloak.version>
-		<scsp.core.version>4.20.0</scsp.core.version>
-		<scsp.beans.version>4.3.0</scsp.beans.version>
-		<scsp.emisor.version>4.22.0</scsp.emisor.version>
-		<scsp.rampart.core.version>1.6.4.1</scsp.rampart.core.version>
-		<scsp.emisor.demo.version>3.3.0</scsp.emisor.demo.version>
+		<keycloak.version>11.0.1</keycloak.version>
 
 		<sitemesh.version>2.4.2</sitemesh.version>
 		<commons-lang.version>2.6</commons-lang.version>
@@ -60,6 +55,7 @@
 		<module>helium-service-intf</module>
 		<module>helium-boot</module>
 		<module>helium-controller</module>
+		<module>helium-persistence</module>
 	</modules>
 	 
 	<build>
