--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -56,6 +56,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
@@ -357,6 +364,7 @@
 			<version>${slf4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-jbpm3</artifactId>
@@ -375,6 +383,12 @@
 					<groupId>org.springframework</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>helium-disseny</artifactId>
+			<version>${helium.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
