#1529 Crear clients per a la comunicació entre microserveis

--- a/microservices/helium-basems/src/main/resources/application.properties
+++ b/microservices/helium-basems/src/main/resources/application.properties
@@ -1,5 +1,18 @@
 spring.application.name=helium-base-service
-
 #configuració per defecte de la imatge de docker: vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+es.caib.helium.integracio.database.jdbc.driver=org.postgresql.Driver
+es.caib.helium.integracio.database.jdbc.url=jdbc:postgresql://localhost:5432/integracio
+es.caib.helium.integracio.database.jdbc.user=integracio_user
+es.caib.helium.integracio.database.jdbc.password=integracio_user_password
+es.caib.helium.integracio.database.jdbc.schema=public
+
+es.caib.helium.dada-service-user=
+es.caib.helium.dada-service-password=
+
+spring.zipkin.enabled=false
+spring.cloud.discovery.enabled=false
+
+server.error.include-stacktrace=never
