--- a/microservices/helium-dada-service/src/main/resources/application.properties
+++ b/microservices/helium-dada-service/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=helium-dada-service
 server.port=8083
 #server.error.include-stacktrace=never
 
+spring.data.mongodb.uri=mongodb://localhost:30001/hel_dada
+spring.data.mongodb.database=hel_dada
+
