--- a/microservices/helium-camunda/pom.xml
+++ b/microservices/helium-camunda/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.5.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>es.caib.helium</groupId>
@@ -20,13 +20,14 @@
         <java.version>11</java.version>
         <spring-cloud.version>2020.0.2</spring-cloud.version>
         <logstash.logback.version>6.6</logstash.logback.version>
-        <spring.boot.version>2.4.3</spring.boot.version>
-        <spring.version>5.3.4</spring.version>
+        <spring.boot.version>2.5.2</spring.boot.version>
+        <spring.version>5.3.8</spring.version>
         <spring.cloud.zipkin.version>3.0.0-M3</spring.cloud.zipkin.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.18</org.projectlombok.version>
         <jaxb.version>2.3.0</jaxb.version>
         <camunda.version>7.15.0</camunda.version>
+        <keycloak.version>11.0.1</keycloak.version>
     </properties>
 
     <dependencyManagement>
@@ -68,6 +69,18 @@
     </dependencyManagement>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-core</artifactId>
+            <version>${keycloak.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.camunda.bpm</groupId>
