#1492 Helium MS. Fase 3 Desenvolupar projecte (Helium-Camunda) amb el motor de workflow de Camunda amb la API REST de workflow
Actualitzar versions d'spring boot, i afegir autenticació

--- a/microservices/helium-mvc-service-bom/pom.xml
+++ b/microservices/helium-mvc-service-bom/pom.xml
@@ -37,6 +37,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.keycloak</groupId>-->
 <!--            <artifactId>keycloak-spring-boot-starter</artifactId>-->
