--- a/microservices/helium-domini-service/src/main/resources/application.properties
+++ b/microservices/helium-domini-service/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=helium-domini-service
 server.port=8082
 
 server.error.include-stacktrace=never
+
+es.caib.helium.domini.intern.service.host=http://localhost:8080/helium/ws/DominiIntern
