--- a/microservices/helium-domini-service/src/main/resources/bootstrap-spring-cloud.properties
+++ b/microservices/helium-domini-service/src/main/resources/bootstrap-spring-cloud.properties
@@ -6,5 +6,5 @@ spring.cloud.config.password=H3lConf1g
 spring.cloud.config.fail-fast=true
 
 eureka.client.service-url.defaultZone=http://helium:H3lEurek4@localhost:8761/eureka
-
+eureka.instance.prefer-ip-address=true
 
