--- a/microservices/helium-parent-bom/pom.xml
+++ b/microservices/helium-parent-bom/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.2</version>
         <relativePath />
     </parent>
 
@@ -37,8 +37,9 @@
         <kotlin.version>1.4.21-2</kotlin.version>
         <awaitility.version>4.0.3</awaitility.version>
         <spock.version>2.0-M4-groovy-3.0</spock.version>
-        <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
+        <spring-boot-admin.version>2.4.2</spring-boot-admin.version>
+        <spring-cloud.version>2020.0.3</spring-cloud.version>
+        <keycloak.version>11.0.1</keycloak.version>
         <docker.image.prefix>mshelium</docker.image.prefix>
         <docker.image.name>${project.artifactId}</docker.image.name>
     </properties>
@@ -85,6 +86,12 @@
                 <version>${awaitility.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.keycloak</groupId>
+                <artifactId>keycloak-core</artifactId>
+                <version>${keycloak.version}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -111,9 +118,19 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -231,6 +248,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.2</version>
                 <configuration>
                     <layers>
                         <enabled>true</enabled>
@@ -239,7 +257,9 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>auto-clean</id>
@@ -282,6 +302,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -395,6 +416,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
                         <id>enforce-versions</id>
