#1492 Helium MS. Fase 3 Desenvolupar projecte (Helium-Camunda) amb el motor de workflow de Camunda amb la API REST de workflow

--- a/microservices/helium-camunda/pom.xml
+++ b/microservices/helium-camunda/pom.xml
@@ -240,6 +240,14 @@
             <version>${jaxb.version}</version>
         </dependency>
 
+        <!-- Feign Client -->
+        <dependency>
+            <groupId>es.caib.helium</groupId>
+            <artifactId>helium-client-service</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <!-- Feign Client -->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
