--- a/helium-service/pom.xml
+++ b/helium-service/pom.xml
@@ -44,11 +44,11 @@
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.10.10</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>joda-time</groupId>-->
+<!--			<artifactId>joda-time</artifactId>-->
+<!--			<version>2.10.10</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -142,7 +142,12 @@
 <!--		</dependency>-->
 		<dependency>
 			<groupId>org.jodconverter</groupId>
-			<artifactId>jodconverter-local</artifactId>
+			<artifactId>jodconverter-remote</artifactId>
+			<version>4.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jodconverter</groupId>
+			<artifactId>jodconverter-spring-boot-starter</artifactId>
 			<version>4.4.2</version>
 		</dependency>
 
@@ -237,11 +242,18 @@
 			</exclusions>
 		</dependency>
 		
+<!--		<dependency>-->
+<!--			<groupId>io.dropwizard.metrics</groupId>-->
+<!--			<artifactId>metrics-json</artifactId>-->
+<!--			<version>${metrics.version}</version>-->
+<!--		</dependency>-->
+
 		<dependency>
-			<groupId>io.dropwizard.metrics</groupId>
-			<artifactId>metrics-json</artifactId>
-			<version>${metrics.version}</version>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
 		</dependency>
+
 		
 		<dependency>
 			<groupId>com.lowagie</groupId>
