--- a/microservices/helium-client-service/pom.xml
+++ b/microservices/helium-client-service/pom.xml
@@ -66,6 +66,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-core</artifactId>
+			<version>1.26</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
