--- a/microservices/helium-dada-service/pom.xml
+++ b/microservices/helium-dada-service/pom.xml
@@ -9,7 +9,6 @@
 		<version>1.0</version>
 	</parent>
 
-	<groupId>es.caib.helium</groupId>
 	<artifactId>helium-dada-service</artifactId>
 	<version>1.0.0</version>
 	<name>helium-dada-service</name>
@@ -77,12 +76,12 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Mockito extention -->
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
+<!--		&lt;!&ndash; Mockito extention &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.mockito</groupId>-->
+<!--			<artifactId>mockito-junit-jupiter</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
