#1492 Helium MS. Fase 3 Desenvolupar projecte (Helium-Camunda) amb el motor de workflow de Camunda amb la API REST de workflow

--- a/microservices/helium-camunda/src/main/resources/application.yaml
+++ b/microservices/helium-camunda/src/main/resources/application.yaml
@@ -13,3 +13,10 @@ es:
       helium-data-service-host: http://localhost:8083
       dada-service-user: user
       dada-service-password: pass
+
+camunda:
+  bpm:
+    eventing:
+      execution: true
+      history: true
+      task: true
