--- a/microservices/helium-camunda/pom.xml
+++ b/microservices/helium-camunda/pom.xml
@@ -27,6 +27,7 @@
         <org.projectlombok.version>1.18.18</org.projectlombok.version>
         <jaxb.version>2.3.0</jaxb.version>
         <camunda.version>7.15.0</camunda.version>
+        <camunda-extension.version>2.1.2</camunda-extension.version>
         <keycloak.version>11.0.1</keycloak.version>
     </properties>
 
@@ -61,6 +62,13 @@
                 <type>pom</type>
             </dependency>
             <dependency>
+                <groupId>org.camunda.bpm.extension.reactor</groupId>
+                <artifactId>camunda-bpm-reactor-spring-starter</artifactId>
+                <version>${camunda-extension.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${org.mapstruct.version}</version>
@@ -74,6 +82,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>logback-classic</artifactId>
+                    <groupId>ch.qos.logback</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
@@ -85,11 +99,15 @@
         <dependency>
             <groupId>org.camunda.bpm</groupId>
             <artifactId>camunda-engine</artifactId>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.camunda.bpm</groupId>
             <artifactId>camunda-engine-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.camunda.bpm.extension.reactor</groupId>
+            <artifactId>camunda-bpm-reactor-spring-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -174,6 +192,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
