--- a/helium-persistence/src/main/resources/application.properties
+++ b/helium-persistence/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.liquibase.enabled=false
 spring.liquibase.database-change-log-table=ems_databasechangelog
 spring.liquibase.database-change-log-lock-table=ems_databasechangeloglock
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
+
+
+# Oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:49161:xe
+spring.datasource.username=helium
+spring.datasource.password=helium
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
