#1492 Helium MS. Fase 3 Desenvolupar projecte (Helium-Camunda) amb el motor de workflow de Camunda amb la API REST de workflow

--- a/microservices/helium-camunda/src/main/resources/application.yaml
+++ b/microservices/helium-camunda/src/main/resources/application.yaml
@@ -20,3 +20,9 @@ camunda:
       execution: true
       history: true
       task: true
+
+logging:
+  level:
+    es:
+      caib:
+        helium: info
