--- a/microservices/helium-domini-service/pom.xml
+++ b/microservices/helium-domini-service/pom.xml
@@ -35,6 +35,11 @@
             <version>1.6.19</version>
         </dependency>
 <!--        <dependency>-->
+<!--            <groupId>es.caib.helium</groupId>-->
+<!--            <artifactId>helium-client-service</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
 <!--            <groupId>wsdl4j</groupId>-->
 <!--            <artifactId>wsdl4j</artifactId>-->
 <!--        </dependency>-->
