--- a/microservices/helium-domini-service/src/main/resources/application.properties
+++ b/microservices/helium-domini-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8082
 server.error.include-stacktrace=never
 
 es.caib.helium.domini.intern.service.host=http://localhost:8080/helium/ws/DominiIntern
+feign.autoconfiguration.jackson.enabled=true
