--- a/microservices/helium-camunda/pom.xml
+++ b/microservices/helium-camunda/pom.xml
@@ -116,10 +116,10 @@
         </dependency>
 
 
-<!--        <dependency>-->
-<!--            <groupId>org.camunda.bpm.springboot</groupId>-->
-<!--            <artifactId>camunda-bpm-spring-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.camunda.bpm.springboot</groupId>
+            <artifactId>camunda-bpm-spring-boot-starter</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.camunda.bpm.springboot</groupId>-->
 <!--            <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>-->
