#1531 Helium MS. Fase 1 Integració Helium-Helium-jbpm

--- a/microservices/helium-jbpm/helium-jbpm-back/src/main/webapp/WEB-INF/web.xml
+++ b/microservices/helium-jbpm/helium-jbpm-back/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<listener>
-		<listener-class>es.caib.helium.back.config.InicialitzacioListener</listener-class>
+		<listener-class>net.conselldemallorca.helium.back.config.InicialitzacioListener</listener-class>
 	</listener>
 	
 	<context-param>
