--- a/microservices/helium-expedient-service/pom.xml
+++ b/microservices/helium-expedient-service/pom.xml
@@ -45,8 +45,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
