#1537 Integrar Helium amb MS d'expedients i tasques
- Modificat el llistat d'expedients amb consulta per ID's
- Modificat el llistat de tasques

--- a/microservices/helium-expedient-service/pom.xml
+++ b/microservices/helium-expedient-service/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>helium-common-ms</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>es.caib.helium</groupId>
+			<artifactId>helium-client-service</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 
 
 		<dependency>
