--- a/microservices/helium-client-service/pom.xml
+++ b/microservices/helium-client-service/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.12.0</version>
+		</dependency>
 
     </dependencies>
 
