--- a/microservices/helium-jbpm/helium-jbpm-back/src/main/webapp/WEB-INF/web.xml
+++ b/microservices/helium-jbpm/helium-jbpm-back/src/main/webapp/WEB-INF/web.xml
@@ -104,7 +104,7 @@
 			<web-resource-name>Open areas</web-resource-name>
 			<url-pattern>/index.jsp</url-pattern>
 			<url-pattern>/error.jsp</url-pattern>
-			<url-pattern>/api/rest/*</url-pattern>
+			<url-pattern>/api/v1/*</url-pattern>
 		</web-resource-collection>
 	</security-constraint>
 	<!-- security-constraint.end -->
