--- a/microservices/helium-client-service/pom.xml
+++ b/microservices/helium-client-service/pom.xml
@@ -81,8 +81,14 @@
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
-		    <version>3.12.0</version>
 		</dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
