#1538 Modificar MS expedients per afegir arbres de processos

--- a/microservices/helium-common-ms/pom.xml
+++ b/microservices/helium-common-ms/pom.xml
@@ -7,6 +7,7 @@
 	<version>1.0.0</version>
 	<name>helium-common-ms</name>
 	<description>Projecte amb codi comú pels MS.</description>
+	<packaging>jar</packaging>
 
 	<properties>
 		<org.projectlombok.version>1.18.18</org.projectlombok.version>
