--- a/helium-plugin-api/pom.xml
+++ b/helium-plugin-api/pom.xml
@@ -43,12 +43,11 @@
 			<artifactId>helium-client-service</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		<dependency>
-			<groupId>es.caib.helium</groupId>
-			<artifactId>helium-client-service</artifactId>
-			<version>1.0.0</version>
-			<scope>compile</scope>
-		</dependency>
-
-	</dependencies>
+        <dependency>
+            <groupId>org.fundaciobit.pluginsib.arxiu</groupId>
+            <artifactId>pluginsib-arxiu-api</artifactId>
+            <version>2.0.4</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
