--- a/microservices/helium-jbpm/helium-jbpm-back/pom.xml
+++ b/microservices/helium-jbpm/helium-jbpm-back/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>helium-jbpm-back</artifactId>
     <packaging>war</packaging>
 
+	<properties>
+		<java.compiler.version>7</java.compiler.version>
+		<maven.compiler.target>${java.compiler.version}</maven.compiler.target>
+		<maven.compiler.source>${java.compiler.version}</maven.compiler.source>
+	</properties>
+	
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
