#1537 Integrar Helium amb MS d'expedients i tasques
- Grups i responsables com a Strings
- Codi del motor en el procés
- Canvi d'identificadors per a les taules

--- a/microservices/helium-camunda/src/main/resources/application.yaml
+++ b/microservices/helium-camunda/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ es:
       helium-data-service-host: http://localhost:8083
       dada-service-user: user
       dada-service-password: pass
+      engine: 
+        codi: CAMUNDA01
 
 camunda:
   bpm:
