--- a/microservices/helium-jbpm/helium-jbpm-engine/src/main/resources/application.properties
+++ b/microservices/helium-jbpm/helium-jbpm-engine/src/main/resources/application.properties
@@ -3,3 +3,6 @@ eureka.shouldUseDns=false
 eureka.serviceUrl.default=http://helium:H3lEurek4@helium-eureka:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.decoderName=JacksonJson
+
+# Codi del motor JBPM a l'hora de crear processos
+es.caib.helium.engine.codi=JBPM01
