--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -31,7 +31,8 @@ spring.artemis.password=simetraehcapa
 
 # Propietats persona
 
-es.caib.helium.integracio.persones.class=es.caib.helium.integracio.service.persones.PersonaServiceJdbcImpl
+#Seycon
+#es.caib.helium.integracio.persones.class=es.caib.helium.integracio.service.persones.PersonaServiceJdbcImpl
 es.caib.helium.integracio.persones.jdbc.driver=oracle.jdbc.OracleDriver
 es.caib.helium.integracio.persones.jdbc.url=jdbc:oracle:thin:@10.35.3.242:1521:orcl
 es.caib.helium.integracio.persones.jdbc.user=seycon
@@ -41,6 +42,8 @@ es.caib.helium.integracio.persones.jdbc.filter.code=select usu_codi, usu_nom, us
 es.caib.helium.integracio.persones.jdbc.filter.name=select usu_codi, usu_nom, usu_nif, usu_codi || '@limit.es' from sc_wl_usuari where upper(usu_nom) like upper('%'||?||'%')
 es.caib.helium.integracio.persones.jdbc.nom.llinatges.junt=true
 
+
+#LDAP
 #es.caib.helium.integracio.persones.class=es.caib.helium.integracio.service.persones.PersonaServiceLdapImpl
 es.caib.helium.integracio.persones.plugin.ldap.url=ldap://server00:389/
 es.caib.helium.integracio.persones.plugin.ldap.principal=consultaldap@LIMIT_CECOMASA.LOCAL
@@ -50,6 +53,17 @@ es.caib.helium.integracio.persones.plugin.ldap.search.base=ou=LIMIT - CECOMASA,d
 es.caib.helium.integracio.persones.plugin.ldap.search.filter.user=(&(objectClass=user)(sAMAccountName=###))
 es.caib.helium.integracio.persones.plugin.ldap.search.filter.like=(&(objectClass=user)(|(givenName=*###*)(sn=*###*)))
 es.caib.helium.integracio.persones.plugin.ldap.attributes=sAMAccountName,givenName,sn,nif,mail
+
+#GOIB
+es.caib.helium.integracio.persones.class=es.caib.helium.integracio.service.persones.PersonaServiceGoibImpl
+es.caib.helium.integracio.persones.plugin.goib.url.property=pluginsib.userinformation.keycloak.serverurl
+es.caib.helium.integracio.persones.plugin.goib.url=https://dev.caib.es/auth/
+es.caib.helium.integracio.persones.plugin.goib.realm.property=pluginsib.userinformation.keycloak.realm
+es.caib.helium.integracio.persones.plugin.goib.realm=webdes
+es.caib.helium.integracio.persones.plugin.goib.client.property=pluginsib.userinformation.keycloak.client_id
+es.caib.helium.integracio.persones.plugin.goib.client=goib-ws
+es.caib.helium.integracio.persones.plugin.goib.secret.property=pluginsib.userinformation.keycloak.password_secret
+es.caib.helium.integracio.persones.plugin.goib.secret=cf346def-19fd-42b9-885d-9a65519e4cd9
 
 ##########################################################################################
 
