#1534 Integrar Helium amb microservei serveis externs

--- a/microservices/helium-integracio-service/src/main/resources/application.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application.properties
@@ -5,5 +5,5 @@ POSTGRES_USER=integracio_user
 POSTGRES_PASSWORD=integracio_user_password
 POSTGRES_DB=integracio
 
-#server.error.include-stacktrace=never
+server.error.include-stacktrace=never
 
