--- a/helium-service/pom.xml
+++ b/helium-service/pom.xml
@@ -358,6 +358,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
+		<dependency>
 			<groupId>es.caib.helium</groupId>
 			<artifactId>helium-client-service</artifactId>
 			<version>1.0.0</version>
