--- a/microservices/helium-domini-service/src/main/resources/application-local.properties
+++ b/microservices/helium-domini-service/src/main/resources/application-local.properties
@@ -6,9 +6,12 @@ spring.cloud.discovery.enabled=false
 
 # OracleDB connection settings
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@//localhost:49161/xe
-spring.datasource.username=hel_domini
-spring.datasource.password=hel_domini
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:49161/xe
+#spring.datasource.username=hel_domini
+#spring.datasource.password=hel_domini
+spring.datasource.url=jdbc:oracle:thin:@//10.35.3.242:1521/orcl
+spring.datasource.username=helium_ms
+spring.datasource.password=helium_ms
 
 # HikariCP settings
 spring.datasource.hikari.minimumIdle=5
@@ -31,3 +34,12 @@ springdoc.swagger-ui.path=/api/documentation.html
 
 # Helium
 es.caib.helium.domini.intern.service.host=http://localhost:8080/helium/ws/DominiIntern
+
+logging.level.es.caib.helium=DEBUG
+logging.level.es.caib.helium.client=DEBUG
+# logging.level.org.springframework: DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+feign.client.config.default.loggerLevel=full
+
